[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "pyNozzle"
version = "0.0.1"
authors = [
  { name="EternoImpietri"},
]
description = "A small package to handle nozzle flow"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
repository = "https://github.com/EternoImpietri/pyNozzle"